--- a/index.Rmd
+++ b/index.Rmd
@@ -16,8 +16,8 @@ It has been first taught to the Brazilian Stats Office, Instituto Brasileiro de 
 ## Material
 
 -   [Introduction](tutorials/day1_presentation.html)
--   [Tutorial 1](tutorials/tutorial1/tutorial1_linearRegression.html): How to think like a Bayesian and build a first population model?
--   [Tutorial 2](tutorials/tutorial2/tutorial2_hierarchicalModel.html): How to model large-scale spatial variations?
+-   [Tutorial 1](tutorials/tutorial1/tutorial1_linearRegression.html): How to think like a Bayesian and build a first population model? [Quiz](tutorials/quiz/mcq_tuto1.html)
+-   [Tutorial 2](tutorials/tutorial2/tutorial2_hierarchicalModel.html): How to model large-scale spatial variations? [Quiz](tutorials/quiz/mcq_tuto2.html)
 -   [Tutorial 3](tutorials/tutorial3/tutorial3_covariates.html): How to model small-scale spatial variations?
 -   [Tutorial 4](tutorials/tutorial4/tutorial4_diagnosticsPrediction.html): Advanced model diagnostics and prediction
 -   [Conclusion](tutorials/day5_presentation.html)
