convert quiz 3 for open publication

--- a/tutorials/quiz/mcq_tuto3.Rmd
+++ b/tutorials/quiz/mcq_tuto3.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Statistical population modelling for census support"
-subtitle: "Day 4"
+subtitle: "Quiz 3"
 author: "Edith Darin"
 output:
   xaringan::moon_reader:
@@ -30,42 +30,6 @@ xaringanExtra::use_logo(
 ```
 
 # Quiz
-
-
-
----
-# GIS 
-
-.center2[
-How familiar are you with GIS?
-
-1. Not at all
-2. Slightly
-3. Familair
-4. Very familiar
-]
-
----
-# GIS 
-
-.center2[
-Have you ever worked with raster data?
-
-1. Yes
-2. No
-]
----
-# GIS
-
-.center2[
-Which software are you more likely to use for GIS data?
-
-1. GIS-dedicated software (ARCGIS, QGIS,...)
-2. Python
-3. R
-4. GDAL
-5. Not applicable
-]
 
 ---
 
@@ -233,22 +197,4 @@ $$ salary = \alpha + \beta_f * experience$$
 
 $$ salary = \alpha_f + \beta_f * experience$$
 
----
-layout: false
 
-# R
-
-.center2[
-Are you familiar with tidyverse in R?
-1. Yes
-2. No
-]
----
-# R
-
-.center2[
-Can you follow easily the R code in the tutorial?
-1. Yes
-2. No
-3. I haven't looked in details at the code
-]
