--- a/index.Rmd
+++ b/index.Rmd
@@ -6,9 +6,16 @@ output:
     includes:
        in_header: wd/misc/clicky.html
 ---
+```{r logo, echo=FALSE}
+###LOAD WP LOGO##
+htmltools::img(src = knitr::image_uri("./assets/pic/320px-UNFPA_logo.svg.png"),
+               alt = 'logo', style = 'position:absolute; top:60px; right:0; width: 25%; height: auto; padding:20px')
 
-![](assets/pic/wp_logotype_gray_low.png)
-
+```
+```{r, echo=F, logo-side, fig.show="hold", out.width="20%"}
+knitr::include_graphics('assets/pic/wp_logotype_grey_hi.png')
+knitr::include_graphics('assets/pic/USH0149_LOGO-2021_RGB_Neutral_Punched-AW.svg')
+```
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -54,7 +61,7 @@ You are free to redistribute this document under the terms of a Creative Commons
 
 # Suggested citation
 
-Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. United Nations Population Fund (UNFPA), Regional Office for Latin America and the Caribbean and WorldPop, University of Southampton. <https://wpgp.github.io/bottom-up-tutorial/>, <doi:10.5281/zenodo.5572490>
+Darin E, Leasure DR, Tatem AJ. 2021. Statistical population modelling for census support. United Nations Population Fund (UNFPA) and WorldPop, University of Southampton. <https://wpgp.github.io/bottom-up-tutorial/>, <doi:10.5281/zenodo.5572490>
 
 <br>
 
